js added and snake food created

--- a/index.html
+++ b/index.html
@@ -3,8 +3,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snake</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="canvas">
+        <div class="score">
+            <div class="cscore">Score : 15</div>
+            <div class="hscore">High Score : 25</div>
+        </div>
+        <div class="game_board">
+
+        </div>
+    </div>
+
+    <script src=""></script>
 </body>
 </html>
